2015-04-17  Roland McGrath  <roland@hack.frob.com>

	* elf/dl-close.c (_dl_close_worker) [DL_NNS == 1]: Just assert that
	IMAP->l_prev cannot be null, and #if out the code for the contrary
	case, avoiding 'assert (nsid != LM_ID_BASE)' making the compiler
	believe that NS (&_dl_ns[NSID]) could point outside the array.

	* elf/dl-open.c (_dl_open): Use __glibc_unlikely in invalid namespace
	check.  Reject NSID < 0 and NSID >= dl_nns, and check for DL_NNS==1,
	before using NSID as an index.

2015-04-17  Il'ya Malakhov <ilmalakhov@yandex.ru>

	[BZ #17825]
	* sysdeps/sparc/sparc64/memchr.S: Fix signedness handling of length.
	* sysdeps/sparc/sparc64/memcmp.S: Likewise.
	* sysdeps/sparc/sparc64/strncmp.S: Likewise.

2015-04-17  Roland McGrath  <roland@hack.frob.com>

	Add preliminary port to Google Native Client on ARM.
	* abi-tags (.*-.*-nacl.*): New entry.
	* sysdeps/arm/nacl: New directory.
	* sysdeps/nacl: New directory.

2015-04-16  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h: Make use of
	lowlevellock-futex.h

2015-04-16  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/tile/configure.ac: New file.
	* sysdeps/tile/configure: Regenerated.

2015-04-15  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* wcsmbs/wcschr.c [WCSCHR] (wcschr): Define as __wcschr.  Remove
	conditionals for weak_alias and libc_hidden_weak.
	* sysdeps/i386/i686/multiarch/wcschr-c.c [libc]: Undefine
	libc_hidden_weak and weak_alias.
	* sysdeps/powerpc/powerpc32/power4/multiarch/wcschr-ppc32.c [libc]:
	Undefine libc_hidden_weak. Define libc_hidden_def for SHARED builds
	and weak_alias for static one.

2015-04-15  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Regenerate from scratch.

2015-04-13  Stefan Liebler  <stli@linux.vnet.ibm.com>

	[BZ #18206]
	* wcsmbs/wcsncmp.c (wcsncmp): Compare as wchar_t, not wint_t.
	  Use signed comparision instead of substraction to avoid
	  overflow bug.